0022805: Bug of STEP read /writer